# spectrum

./: README.md
esxdos/: mem.asm
pt3player/: pt3player.asm
zxpac/: z80_decruncher.asm  zxpac.c
zxpac2/: CMakeLists.txt  README  analyze.py  optimalish_parse.c  optimalish_parse.h  prep.sh  z80dec.asm  z80dec.h  z80exe.asm  zxpac_v2.c  zxpac_v3.c
zxpac3/: CMakeLists.txt  algorithms.txt  bffp.cpp  bffp.h  bffp_cost.cpp  bffp_cost.h  bffp_encoding.h  bfhp.cpp  bfhp.h  bfhp_cost.cpp  bfhp_cost.h  hash.cpp  hash.h  lz_base.h  lz_utils.cpp  lz_utils.h  main.cpp  mtf256.cpp  mtf256.h  mtf256list.cpp  mtf256list.h  pmr.cpp  pmr.h  radixsort.h  radixsort1.cpp  radixsort2.cpp  radixsort2.h  radixsort3.cpp  radixsort3.h  z_alg.cpp  z_alg.h
zxpac4/: CMakeLists.txt  Doxyfile  README  preproc.py  stat.py
zxpac4/ans/: README  ans.h  rabs.py  rans.py  tans.cpp  tans.py  tans_decoder.h  tans_decoder_k.h  tans_encoder.cpp  tans_encoder.h  trace.h  z80_tans_decoder.asm
zxpac4/inc/: ans.h  cost.h  cost4.h  cost4_32k.h  cost4b.h  cost4c.h  cost4d.h  hash.h  hunk.h  lz_base.h  lz_util.h  mtf256.h  pmr.h  rice_encoder.h  tans_encoder.h  target.h  target_amiga.h  target_asc.h  target_bbc.h  target_bin.h  version.h  z_alg.h  zxpac4.h  zxpac4_32k.h  zxpac4b.h  zxpac4c.h  zxpac4d.h
zxpac4/m68k/: CMakeLists.txt  bin2c.py  how_to_assemble.txt  zxpac4_32k_abs.asm  zxpac4_32k_exe.asm  zxpac4_32k_exe.h  zxpac4_abs.asm  zxpac4_data.asm  zxpac4_data_fwd.asm  zxpac4_exe.asm  zxpac4_exe.h
zxpac4/src/: .hash.cpp.swp  cost.cpp  cost4.cpp  cost4_32k.cpp  cost4b.cpp  cost4c.cpp  cost4d.cpp  hash.cpp  hunk.cpp  main.cpp  mtf256.cpp  pmr.cpp  target_amiga.cpp  target_asc.cpp  target_bbc.cpp  target_bin.cpp  target_spectrum.cpp  z_alg.cpp  zxpac4.cpp  zxpac4_32k.cpp  zxpac4b.cpp  zxpac4c.cpp  zxpac4d.cpp
zxpac4/z80/: CMakeLists.txt  z80_offsets.h  z80dec.asm  z80dec4c.asm  z80dec_v2.asm  z80rdec.asm  z80rdec_rev.asm  z80rdecb.asm  z80tap.asm
zxtap/: zxtap.c
